litmask/tests/compile/mask_env_unset_with_custom_message.stderr
error: mask_env! unset: custom: please run with FOO set
  --> tests/compile/mask_env_unset_with_custom_message.rs:10:9
   |
10 |         "LITMASK_TRYBUILD_DEFINITELY_UNSET_X9Z42",
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
